fix(components): Info Panel add overflow-x to have better UX with narrow screen

--- a/src/components/InfoPanel/Header/SelectorList.css
+++ b/src/components/InfoPanel/Header/SelectorList.css
@@ -6,6 +6,7 @@
   /* width */
   ::-webkit-scrollbar {
     width: 6px;
+    height: 10px;
   }
   
   /* Track */
